@@ -32,10 +32,9 @@ SUBDIRS = contrib gnulib/lib po src doc man tests
 # official release is made (and only if you care to provide diffs).
 #
 hello_pre = 2.3
-#
 diff: diffcheck
 	@(echo "To apply these patches, cd to the main directory of the package"; \
-	  echo "and then use \`patch -p1 < hello-XXX.diff'."; \
+	  echo "and then use \`patch -p1 <hello-XXX.diff'."; \
 	  echo "Before building the program, run \`autogen.sh'."; ) > \
 	    $(PACKAGE)-$(hello_pre)-$(VERSION).diff
 	-diff -rc2P --exclude=configure --exclude=config.h.in --exclude=*.info \
@@ -56,10 +55,10 @@ diffcheck:
 	    fi ; \
 	done
 
-# From coreutils.
 # Verify that all source files using _() are listed in po/POTFILES.in.
 # The idea is to run this before making pretests, as well as official
-# releases, so that 
+# releases, so that translators will be sure to have all the messages.
+# (From coreutils.)
 po-check:
 	if test -f po/POTFILES.in; then					\
 	  grep -E -v '^(#|$$)' po/POTFILES.in				\
@@ -81,3 +80,19 @@ po-check:
 	  diff -u $@-1 $@-2 || exit 1;					\
 	  rm -f $@-1 $@-2;						\
 	fi
+
+doctemp = doc/wwwtemp
+gnulib = $(HOME)/gnu/src/gnulib
+gendocs = $(gnulib)/build-aux/gendocs.sh
+gendocs_envvars = GENDOCS_TEMPLATE_DIR=$(gnulib)/doc
+manual = hello
+manual_title = "Hello, GNU World"
+www_target = $(HOME)/gnu/www/hello/manual
+wwwdoc:
+	rm -rf $(doctemp) && mkdir $(doctemp)
+	cd $(doctemp) \
+	&& ln -s ../*.texi . \
+	&& env $(gendocs_envvars) $(gendocs) $(manual) $(manual_title)
+	cp -arf $(doctemp)/manual/. $(www_target)
+	ls -ltu $(www_target)/html_node | tail  # cvs rm -f obsolete files
+# followed by cvs add of new files and cvs commit.
