@@ -1,4 +1,4 @@
-@set UPDATED 28 November 2008
-@set UPDATED-MONTH November 2008
+@set UPDATED 14 December 2008
+@set UPDATED-MONTH December 2008
 @set EDITION 2.4
 @set VERSION 2.4
